--- a/src/Homepage/CSS/Card.css
+++ b/src/Homepage/CSS/Card.css
@@ -1,7 +1,7 @@
 .card {
   display: flex;
   flex-direction: column;
-  flex: 0 1 auto;
+  flex: 1 1 auto;
   font-size: 2rem;
   width: 30vw;
   height: 100%;
@@ -10,6 +10,8 @@
   justify-content: center;
   margin: 1rem;
   border-radius: 10px;
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.548);
 }
 .upper {
   display: flex;
@@ -21,7 +23,7 @@
 .username {
   display: flex;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding: 5px;
   width: 100%;
 }
@@ -29,6 +31,9 @@
   display: flex;
   max-width: 100%;
   max-height: 100%;
+}
+.meme-title {
+  padding: 0.25rem;
 }
 .lower {
   display: flex;
@@ -38,6 +43,7 @@
 .lower img,
 svg {
   cursor: pointer;
+  width: 2rem;
 }
 
 /*
@@ -54,4 +60,17 @@ svg {
 .active-heart {
   stroke: red;
   fill: red;
+}
+
+/* thumbs up*/
+.active-thumbup {
+  stroke: rgb(89, 89, 197);
+}
+/*Thumbs Down */
+.active-thumbdown {
+  stroke: rgb(89, 89, 197);
+}
+/*Report */
+.report:hover {
+  stroke: orange;
 }
