--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -3,6 +3,9 @@
   width: 35vw;
   margin: 1rem;
   max-width: 800px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: rgb(235, 238, 240) 1px solid;
+  border-radius: 10px;
 }
 
 .card {
@@ -12,7 +15,7 @@
   font-size: 2rem;
   width: 30vw;
   height: 100%;
-  border: black 1px solid;
+
   align-items: center;
   justify-content: center;
   border-radius: 10px;
