--- a/src/CSS Components/DropDownMenu.css
+++ b/src/CSS Components/DropDownMenu.css
@@ -1,21 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.settings {
+  position: absolute;
+  top: 0;
+  background-color: grey;
+  width: 300px;
+  height: 100px;
+  z-index: 2;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 :root {
-  --bg: #242526;
-  --bg-accent: #484a4d;
-  --text-color: pink;
+  --bg: #1098f7;
+  --bg-accent: #b74f6f;
+  --text-color: #eeeeee;
   --nav-size: 80px;
   --border: 1px solid grey;
   --border-radius: 8px;
@@ -76,7 +70,7 @@ a {
 
 .dropdown {
   position: absolute;
-  top: 3rem;
+  top: 4rem;
   right: -100px;
   width: 300px;
   transform: translateX(-45%);
@@ -85,6 +79,7 @@ a {
   border-radius: var(--border-radius);
   padding: 1rem;
   overflow: hidden;
+  font-size: 1.2rem;
 }
 
 .menu {
@@ -107,9 +102,23 @@ a {
 }
 
 .menu-item:hover {
-  background-color: #525357;
+  filter: brightness(1.5);
+  background-color: #4b6b81d5;
 }
 
 .icon-button svg {
   padding-left: 10px;
+}
+
+/* Media queries */
+@media only screen and (max-width: 1050px) {
+}
+@media only screen and (max-width: 550px) {
+  .dropdown {
+    right: -95px;
+    width: 240px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
 }
