--- a/src/CSS Components/Filter.css
+++ b/src/CSS Components/Filter.css
@@ -2,3 +2,9 @@
   display: flex;
   flex-direction: row;
 }
+.filter-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: -55%;
+}
