--- a/src/CSS Components/CreateProfile.css
+++ b/src/CSS Components/CreateProfile.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  margin-top: 2rem;
   padding: 1rem 4rem;
   background-color: rgba(243, 243, 243, 0.486);
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
@@ -49,7 +50,7 @@
   cursor: pointer;
   border: none;
   color: #fff;
-  background-color: #c7c6c6;
+  background-color: #424242;
   box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
     0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
   padding: 6px 16px;
@@ -77,5 +78,27 @@
   }
   to {
     filter: brightness(90%);
+  }
+}
+@media only screen and (max-width: 1050px) {
+  .makeStyles-root-12 {
+    width: 100%;
+    margin: auto;
+    /* width: 200px; */
+    /* margin: 8px; */
+  }
+  .create-profile {
+    padding: 0;
+  }
+  .profile-image-preview img {
+    max-width: 50%;
+  }
+}
+@media only screen and (max-width: 1050px) {
+  .makeStyles-root-12 {
+    width: 100%;
+    margin: auto;
+    /* width: 200px; */
+    /* margin: 8px; */
   }
 }
