--- a/src/CSS Components/CreatePost.css
+++ b/src/CSS Components/CreatePost.css
@@ -3,16 +3,30 @@
   border: rgb(235, 238, 240) 1px solid;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   margin-bottom: 2rem;
+  border-radius: 15px;
+}
+.avatar-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0);
 }
 .avatar {
   display: flex;
-  height: 40px;
+  height: 48px;
   border-radius: 20px;
-  width: 40px;
-  background-color: cadetblue;
-  justify-self: flex-start;
-  margin-left: 8px;
+  width: 48px;
+  justify-self: center;
+  align-items: center;
 }
+
+.avatar img {
+  height: 100%;
+  border-radius: 50%;
+  width: 100%;
+}
+
 .create-post-preview {
   display: flex;
   width: 35vw;
@@ -21,16 +35,18 @@
   align-items: center;
 }
 .create-post-content {
-  width: 100%;
+  width: inherit;
   display: flex;
-  padding: 1rem;
+  padding: 1rem 3rem;
   flex-direction: row;
+  align-content: stretch;
+  justify-content: normal;
   align-items: center;
 }
 .add-content {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
   height: 3.6rem;
   margin: 1rem;
@@ -39,7 +55,6 @@
 .plus {
   display: flex;
   border-radius: 50%;
-  background-color: black;
   margin-left: auto;
 }
 .create-prompt {
@@ -59,7 +74,7 @@
   margin: 0.3rem;
 }
 .create-prompt:hover {
-  background-color: rgba(231, 231, 231, 0.966);
+  background-color: rgba(224, 224, 224, 0.966);
 }
 /*Expanded file*/
 .expanded-file {
@@ -132,6 +147,16 @@
   font-size: 0.7rem;
   white-space: nowrap;
 }
+.main-section-form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 
 .main-section {
   width: 100%;
@@ -139,7 +164,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  border: 10px dotted pink;
+  border: 4px dashed black;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -157,10 +182,10 @@
 .image-preview {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: column;
-  height: 400px;
   padding: 1rem;
+  max-height: 400px;
 }
 .image-preview span {
   width: 100%;
@@ -188,21 +213,35 @@
     margin-bottom: 1rem;
     height: 75px;
   }
+  .makeStyles-input-28 {
+    margin: 1rem 0 !important;
+  }
+  .create-post-content {
+    padding: 0 0.3rem;
+  }
   .create-prompt {
     font-size: 0.85rem;
     white-space: pre-wrap;
     padding: 0;
-    margin: 10px;
     width: 100%;
     height: 70px;
+  }
+  .add-content {
+    padding: 0;
+  }
+  .avatar-container {
+    margin-left: 1rem;
   }
 
   .expanded-file {
     width: 80vw;
-    height: 60vh;
+    height: 80vh;
   }
   .upper-middle {
     display: none;
+  }
+  .image-preview {
+    height: 80%;
   }
 
   .plus {
@@ -225,6 +264,16 @@
   }
   .plus {
     height: 1.7rem;
+  }
+}
+@media only screen and (min-height: 750px) and (max-width: 1000px) {
+  .expanded-file {
+    height: 60vh;
+  }
+}
+@media only screen and (min-height: 1024px) and (max-height: 1039px) {
+  .image-preview {
+    height: 250px;
   }
 }
 
