--- a/src/CSS Components/CreatePost.css
+++ b/src/CSS Components/CreatePost.css
@@ -50,7 +50,7 @@
   width: 100%;
   height: 4.6rem;
   margin: 1rem;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 .plus {
   display: flex;
@@ -185,7 +185,9 @@
   justify-content: space-evenly;
   flex-direction: column;
   padding: 1rem;
-  max-height: 400px;
+  max-height: 100%;
+  flex: 1;
+  min-height: 50%;
 }
 .image-preview span {
   width: 100%;
@@ -277,7 +279,7 @@
 
 @media only screen and (max-width: 361px) {
   .create-prompt span {
-    font-size: .94rem;
+    font-size: 0.94rem;
   }
   .expanded-file {
     width: 90vw;
