--- a/src/CSS Components/CreatePost.css
+++ b/src/CSS Components/CreatePost.css
@@ -14,9 +14,9 @@
 }
 .avatar {
   display: flex;
-  height: 48px;
+  height: 52px;
   border-radius: 20px;
-  width: 48px;
+  width: 52px;
   justify-self: center;
   align-items: center;
 }
@@ -25,6 +25,9 @@
   height: 100%;
   border-radius: 50%;
   width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 .create-post-preview {
@@ -74,7 +77,7 @@
   margin: 0.3rem;
 }
 .create-prompt:hover {
-  background-color: rgba(224, 224, 224, 0.966);
+  background-color: rgba(236, 236, 236, 0.562);
 }
 /*Expanded file*/
 .expanded-file {
