--- a/src/CSS Components/DropDownMenu.css
+++ b/src/CSS Components/DropDownMenu.css
@@ -93,6 +93,8 @@ a {
   transition: background var(--speed);
   padding: 0.5rem;
   overflow: hidden;
+  font-weight: 700;
+  font-stretch: 100%;
 }
 .menu-item .icon-button {
   display: flex;
