--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .App {
   text-align: center;
+  font-family: "Roboto";
 }
 
 .App-logo {
