--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 body {
   margin: 0;
-  font-family: "Oswald", sans-serif;
   font-family: "Roboto", sans-serif;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
