--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -88,20 +88,34 @@
 }
 .edit-mode svg {
   height: 25px;
+  cursor: pointer;
+}
+@keyframes appear {
+  from {
+    opacity: 80%;
+  }
+  to {
+    opacity: 100%;
+  }
 }
 
 .expanded-pencil {
+  animation-name: appear;
+  animation-duration: 0.3s;
   height: auto;
   width: 210px;
   position: absolute;
-  top: 2rem;
+  top: 4rem;
   right: 15px;
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid black;
+  border: 1px solid rgb(235, 238, 240);
   padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .expanded-pencil div {
   padding: 1rem;
@@ -196,56 +210,59 @@
 
 /* options expanded menu on card*/
 .options-expanded {
+  animation-name: appear;
+  animation-duration: 0.3s;
+  height: auto;
+  width: 210px;
   position: absolute;
+  top: 4rem;
+  right: 15px;
+  background-color: white;
   display: flex;
   flex-direction: column;
-  width: 120px;
   align-items: center;
-  justify-content: center;
-  height: 60px;
-  background-color: white;
-  padding: 10px;
-  margin-left: 14rem;
-  margin-top: 29rem;
-  border: 1px solid black;
-  z-index: 2;
+  border: 1px solid rgb(235, 238, 240);
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .option1,
 .option2,
 .option3 {
-  display: flex;
   width: 100%;
-  height: 30px;
+  height: 100%;
   font-size: 0.85rem;
   cursor: pointer;
   border-radius: 5px;
-  align-items: center;
-  justify-content: center;
+  padding: 0.5rem;
+  transition: background 0.5s;
 }
+
 .option1 span,
 .option2 span {
   text-align: center;
+  font-size: 1.1rem;
+  font-family: "Roboto";
+  font-weight: 400;
 }
 .option1:hover,
-.option2:hover,
-.option3:hover {
-  background-color: gainsboro;
+.option2:hover {
+  background-color: rgba(180, 180, 180, 0.329);
 }
-.options-expanded span {
-  padding-bottom: 7px;
-}
+
 .expanded {
   width: 100%;
 }
 .report-group {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  flex-direction: row-reverse;
+  justify-content: space-between;
+  flex-direction: row;
   width: 100%;
 }
-.report-group > span {
-  padding-left: auto;
+.report-group svg {
+  width: 35px;
 }
 
 /* responsiveness <3 */
