--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -119,13 +119,14 @@
   height: auto;
   width: 210px;
   position: absolute;
-  top: 4rem;
+  top: 4.5rem;
   right: 15px;
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 1px solid rgb(235, 238, 240);
+  border-radius: 10px;
   padding: 1rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
@@ -236,6 +237,7 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid rgb(235, 238, 240);
+  border-radius: 10px;
   padding: 1rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
@@ -271,12 +273,15 @@
 .report-group {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+
   flex-direction: row;
   width: 100%;
 }
+.report-group span {
+  margin-right: 1rem;
+}
 .report-group svg {
-  width: 35px;
+  width: 25px;
 }
 
 /* responsiveness <3 */
