Removed the firebase-admin package since its unsupported. Decreased the space between the like and heart button

--- a/src/CSS Components/CreatePost.css
+++ b/src/CSS Components/CreatePost.css
@@ -4,6 +4,7 @@
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   margin-bottom: 2rem;
   border-radius: 15px;
+  background-color: white;
 }
 .avatar-container {
   position: relative;
