--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -6,6 +6,7 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border: rgb(235, 238, 240) 1px solid;
   border-radius: 10px;
+  background-color: white;
 }
 
 .card {
@@ -173,7 +174,7 @@
 .lower {
   display: flex;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin-top: 1rem;
 }
 
