--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+.makeStyles-content-13 {
+  max-width: 100vw;
 }
 
 code {
