--- a/src/CSS Components/DropDownMenu.css
+++ b/src/CSS Components/DropDownMenu.css
@@ -114,6 +114,9 @@ a {
 .icon-button svg {
   padding-left: 10px;
 }
+.discord-link {
+  width: 100%;
+}
 
 /* Media queries */
 @media only screen and (max-width: 1050px) {
