--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -3,9 +3,11 @@
   width: 35vw;
   margin: 2.5rem;
   max-width: 800px;
+  /* DISABLED FOR NON MOBILE
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border: rgb(235, 238, 240) 1px solid;
   background-color: white;
+  */
 }
 
 .card {
@@ -13,12 +15,14 @@
   flex-direction: column;
   flex: 1 1 auto;
   font-size: 2rem;
-  width: 30vw;
+  width: 40vw;
   height: 100%;
   align-items: center;
   justify-content: center;
   padding: 2rem 2rem 0 2rem;
+  /* DISABLED FOR NON MOBILE
   background-color: rgba(255, 255, 255, 0.548);
+  */
   position: relative;
 }
 .upper {
@@ -38,12 +42,13 @@
 }
 .avatar-picture {
   display: flex;
-  height: 52px;
+  height: 42px;
   border-radius: 20px;
-  width: 52px;
+  width: 42px;
   justify-self: center;
-  align-items: center;
   margin-right: 0.65rem;
+  min-width: 42px;
+  min-height: 42px;
 }
 .avatar-picture img {
   height: 100%;
@@ -68,10 +73,13 @@
   width: 100%;
 }
 .meme-identification {
+  justify-content: flex-start;
+  align-items: center;
+  display: flex;
   font-size: 1rem;
   white-space: nowrap;
   height: 100%;
-  margin-bottom: auto;
+  width: 100%;
 }
 .username {
   display: flex;
@@ -85,7 +93,8 @@
   cursor: default;
   font-weight: 550;
   padding-bottom: auto;
-  color: black;
+  color: #fbfaf8;
+  text-overflow: ellipsis;
 }
 .clickable span {
   font-stretch: ultra-expanded;
@@ -102,7 +111,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #8b8b8b08;
+  background-color: #8b8b8b26;
   border-radius: 5px;
   min-width: 100%;
 }
@@ -187,27 +196,29 @@
   margin: 0.5rem 0;
   font-size: 20px;
   font-weight: 500;
+  color: #fbfaf8;
 }
 .lower {
   display: flex;
   width: 100%;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin: 1rem;
+  overflow: hidden;
 }
 
 .lower img,
 .lower svg {
   cursor: pointer;
-  height: 40px;
+  height: 30px;
 }
 
 /*Like/container*/
 .like-container {
-  margin-right: auto;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 20px;
 }
 .number-of-likes {
   display: flex;
@@ -216,8 +227,7 @@
   text-align: center;
   font-weight: 500;
   font-size: 0.95rem;
-  color: #696969c9;
-  margin-left: 0.5rem;
+  color: #cacacac9;
 }
 
 /*
@@ -227,7 +237,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 20px;
+  margin-left: auto;
 }
 .inactive-heart {
   fill: none;
@@ -246,23 +256,26 @@
 }
 .heart-icon {
   margin-left: -10px;
-  stroke: #696969c9;
+  stroke: #cacacac9;
 }
 
 .active-heart {
-  stroke: "#00000059";
-  fill: red;
+  stroke: black;
+  fill: #ed474a;
   animation: hearted 0.2s steps(20);
 }
 .inactive-thumbup {
-  stroke: #696969c9 !important ;
+  stroke: #cacacac9 !important ;
   stroke-width: 1.5;
 }
 
 /* thumbs up*/
 .active-thumbup {
   stroke-width: 1.5;
-  stroke: rgb(89, 89, 197) !important;
+  stroke: black;
+  /*
+  fill: #00A7E1 !important;
+  */
 }
 /*Thumbs Down */
 .active-thumbdown svg {
