--- a/src/CSS Components/CreatePost.css
+++ b/src/CSS Components/CreatePost.css
@@ -93,6 +93,7 @@
   white-space: nowrap;
   padding: 2rem;
   font-weight: 500;
+  color: #b7b7b7;
 }
 .create-prompt span {
   cursor: pointer;
@@ -102,141 +103,6 @@
 }
 .create-prompt:hover {
   background-color: rgba(236, 236, 236, 0.562);
-}
-/*Expanded file*/
-.expanded-file {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  width: 75vw;
-  max-width: 1000px;
-  align-items: center;
-  justify-content: center;
-  height: 80vh;
-  background-color: rgb(250, 250, 250);
-  border: 2px solid black;
-  z-index: 100;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: -35px -35px 0 0;
-  padding: 1rem;
-  border-radius: 20px;
-}
-.upper-section {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-  position: relative;
-  font-size: 2rem;
-  top: 0;
-  color: rgb(85, 85, 85);
-  white-space: nowrap;
-}
-.upper-section img {
-  margin-left: auto;
-  cursor: pointer;
-}
-.upper-middle {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-  margin: 1rem;
-  height: auto;
-}
-.upper-middle > div {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  flex-direction: row;
-}
-.group img {
-  border: 2px solid black;
-  border-radius: 50%;
-  width: 3rem;
-  padding: 1px;
-}
-.details {
-  padding-left: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  height: 20%;
-}
-.title {
-  font-size: large;
-}
-.description {
-  font-size: 0.7rem;
-  white-space: nowrap;
-}
-.main-section-form {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-}
-
-.main-section {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  border: 4px dashed black;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-}
-.lower-section {
-  display: flex;
-  width: 100%;
-  padding-top: 1rem;
-  justify-content: center;
-  align-items: center;
-}
-.lower-section button {
-  margin-left: auto;
-}
-.image-preview {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-direction: column;
-  width: 100%;
-  padding: 1rem;
-  max-height: 100%;
-  flex: 1;
-  min-height: 50%;
-}
-.image-preview span {
-  width: 100%;
-  font-size: 3rem;
-}
-.image-preview img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-}
-.video-file {
-  position: relative;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  width: 100%;
-  height: auto;
-  z-index: -100;
-  background-size: cover;
-  overflow: hidden;
 }
 
 /*Media Queries */
