--- a/src/CSS Components/MobileNav.css
+++ b/src/CSS Components/MobileNav.css
@@ -17,7 +17,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #1098f7;
+  background-color: #272932;
   min-height: 62px;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
@@ -33,7 +33,7 @@
   align-items: center;
   padding: 0 20px;
   height: 100%;
-  background-color: rgba(56, 56, 56, 0.178);
+  background-color: rgb(121 121 121 / 18%);
   margin: 2px;
   border-radius: 5px;
   min-height: inherit;
@@ -45,4 +45,7 @@
   height: 100%;
   margin: 2px;
   min-height: inherit;
+}
+.mobile-nav-icon svg {
+  width: 28px;
 }
