--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -86,12 +86,13 @@
   font-size: 0.5rem;
   padding: 0 1rem;
   display: flex;
-  height: 100%;
   flex-direction: column;
+  position: relative;
+  height: auto;
 }
 .sidebar-navigation-icon-active {
 }
-.navigation-group:last-child {
+.navigation-group-logout {
   border-top: 1px solid rgba(209, 209, 209, 0.13);
   padding-top: 2rem;
 }
@@ -128,30 +129,71 @@
   align-items: center;
 }
 
+.navigation-group {
+  margin: 0.75rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1rem;
+  cursor: pointer;
+}
+.sidebar-login {
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1rem;
+  cursor: pointer;
+  border-top: 1px solid rgba(141, 141, 141, 0.288);
+}
+.sidebar-login svg {
+  margin-left: 1px;
+  height: 30px;
+  width: 30px;
+}
+.navigation-settings-icon svg {
+  background-color: rgba(255, 255, 255, 0.384);
+  border-radius: 50%;
+  padding: 2px;
+  stroke: white;
+}
+
 /*Settings components*/
 .sidebar-navigation-settings-header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  width: 100%;
 }
 .sidebar-navigation-settings-header span {
   font-size: 1.6rem;
   margin-left: 2rem;
 }
 
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 /*CSS Transition*/
 .navigation-primary-enter {
-  position: relative;
+  position: absolute;
   transform: translateX(-110%);
+  transition: all var(--speed) ease;
 }
 .navigation-primary-enter-active {
-  position: relative;
-
+  position: absolute;
   transform: translateX(0%);
   transition: all var(--speed) ease;
 }
 .navigation-primary-exit {
-  position: relative;
+  position: absolute;
 }
 .navigation-primary-exit-active {
   transform: translateX(-160%);
@@ -159,19 +201,19 @@
 }
 
 .navigation-secondary-enter {
-  position: relative;
+  position: absolute;
   transform: translateX(110%);
   transition: all var(--speed) ease;
 }
 .navigation-secondary-enter-active {
-  position: relative;
+  position: absolute;
   transform: translateX(0%);
   transition: all var(--speed) ease;
 }
 .navigation-secondary-exit {
-  transition: all var(--speed) ease;
 }
 .navigation-secondary-exit-active {
+  position: absolute;
   transform: translateX(140%);
   transition: all var(--speed) ease;
 }
