--- a/src/CSS Components/CreateProfile.css
+++ b/src/CSS Components/CreateProfile.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  color: white;
   height: 100%;
   margin-top: 2rem;
   padding: 1rem 4rem;
@@ -13,6 +13,10 @@
   display: flex;
   flex-direction: column;
 }
+.username label {
+  color: #ffffff57;
+}
+
 .username-prompt {
   margin-bottom: 1rem;
   font-size: 1.1rem;
@@ -21,6 +25,7 @@
 }
 
 .create-avatar {
+  margin-top: 1rem;
   padding: 0 0 2rem 0;
   margin-bottom: auto;
   display: flex;
@@ -29,14 +34,21 @@
 }
 .profile-image-preview {
   display: flex;
-  align-items: center;
+  height: 100px;
+  border-radius: 20px;
+  width: 100px;
   justify-content: center;
-  margin-top: 2rem;
+  align-items: center;
+  padding: auto;
+  margin-bottom: 1rem;
 }
 .profile-image-preview img {
-  max-width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  width: 100%;
   max-height: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 .submit-profile {
   padding: auto;
@@ -44,6 +56,10 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
+}
+.submit-profile span {
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
 }
 .upload-button {
   cursor: pointer;
@@ -70,6 +86,13 @@
 .upload-button:hover {
   filter: brightness(85%);
 }
+.change-avatar {
+  margin-bottom: 1rem;
+  font-size: 0.85rem;
+  margin-left: auto;
+  margin-right: auto;
+  color: rgba(252, 250, 250, 0.932);
+}
 
 @keyframes hover {
   from {
@@ -95,6 +118,9 @@
   .MuiBox-root-10 {
     margin-top: 20px !important;
   }
+  .submit-profile {
+    margin-bottom: 2rem;
+  }
 }
 
 @media only screen and (max-width: 400px) and (max-height: 700px) {
@@ -114,9 +140,6 @@
   }
   .create-profile {
     padding: 0;
-  }
-  .profile-image-preview img {
-    max-width: 50%;
   }
 }
 @media only screen and (max-width: 1050px) {
