--- a/src/CSS Components/Dashboard.css
+++ b/src/CSS Components/Dashboard.css
@@ -89,6 +89,18 @@
   font-weight: 500;
 }
 @media only screen and (max-height: 825px) and (max-width: 500px) {
+  .main-content {
+    margin-top: 2rem;
+  }
+  .end-of-memes {
+    font-size: 1.4rem;
+    color: white;
+    margin: 3rem 2rem;
+    font-weight: 500;
+  }
+  .card-area {
+    margin: 0 2.5rem;
+  }
   .thanks-box {
     height: 100%;
     padding: 0;
