Removed dead and unfinished links. Changed the Upload color to a black text color.

--- a/src/CSS Components/Login.css
+++ b/src/CSS Components/Login.css
@@ -1,7 +1,9 @@
+/*
 .login-contaner span,
 div {
   color: rgb(255, 255, 255) !important;
 }
+*/
 .login-logo {
   display: flex;
   align-items: center;
