Fixed color issues on website

--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -39,6 +39,7 @@
 .sidebar-logo {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin: 1rem;
   font-weight: 600;
   font-size: 2rem;
