--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -26,7 +26,7 @@
   align-items: center;
   background-color: white;
   color: black;
-  width: 80%;
+  width: 100%;
   border-radius: 20px;
   margin: 0 2rem;
   font-weight: 550;
@@ -57,15 +57,15 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 1rem 0;
+  margin: 2rem 0 0 0;
   width: 100%;
 }
 
 .sidebar-avatar-container {
   display: flex;
-  height: 92px;
+  height: 102px;
   border-radius: 20px;
-  width: 92px;
+  width: 102px;
   justify-self: center;
   align-items: center;
 }
@@ -81,6 +81,31 @@
   font-weight: 600;
   margin: 1rem 0;
 }
+
+/*User Activity Information (lives under username on sidebar)*/
+.user-activity-information-container {
+  display: flex;
+  width: 100%;
+  max-width: inherit;
+  flex-direction: row;
+  padding: 0 1rem;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+.user-activity-information-modules {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+.user-activity-information-category {
+  padding: 1rem 0 0 0;
+  color: grey;
+}
+.user-activity-information-number {
+}
+
 .sidebar-navigation {
   border-top: 1px solid rgba(207, 207, 207, 0.13);
   font-size: 0.5rem;
