Created a 3x3 grid on the homepage that is commented out in Dashboard.css

--- a/src/CSS Components/Dashboard.css
+++ b/src/CSS Components/Dashboard.css
@@ -141,3 +141,23 @@
     font-size: 0.75rem;
   }
 }
+
+/*
+THIS CREATES A 3X3 GRID ON THE MAINCONTENT
+Querying computers with width of at least 1300px)
+@media only screen and (min-width: 1300px) {
+  .main-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(7, 1fr);
+    max-width: 100%;
+    padding: 2rem 4rem;
+  }
+  .card-area {
+    width: 100%;
+  }
+  .card {
+    width: 100%;
+  }
+}
+*/
