--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -5,11 +5,10 @@
   max-width: 800px;
   justify-content: center;
   align-items: center;
-  /* DISABLED FOR NON MOBILE
+
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border: rgb(235, 238, 240) 1px solid;
-  background-color: white;
-  */
+  border-radius: 30px;
+  background-color: #02010117;
 }
 
 .card {
@@ -21,12 +20,13 @@
   height: 100%;
   align-items: center;
   justify-content: center;
-  padding: 2rem 2rem 0 2rem;
+  padding: 2rem;
   /* DISABLED FOR NON MOBILE
   background-color: rgba(255, 255, 255, 0.548);
   */
   position: relative;
 }
+
 .upper {
   display: flex;
   flex-direction: column;
@@ -37,10 +37,55 @@
 .upper-top {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   width: 100%;
   font-size: 25px;
-  margin: 0 2rem;
+}
+.upper-top-user-section {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  font-size: small;
+}
+.user-name {
+  font-size: 1rem;
+  font-weight: 600;
+  color: white;
+}
+.time-posted {
+  color: #b5b5b5ad;
+}
+
+.upper-top-options {
+  margin-left: auto;
+}
+.follow-icon-container {
+  height: fit-content;
+  border: 0.5px solid black;
+  border-radius: 10px;
+  width: 60px;
+  background-image: linear-gradient(170deg, #ea3788, #00a7e1);
+  cursor: pointer;
+  padding: 8px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.follow-icon {
+  font-weight: 500;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.upper-lower {
+  display: flex;
+  width: 100%;
+  font-weight: 300;
+  font-size: 1rem;
+  margin: 0.75rem 0;
+}
+.title {
 }
 .avatar-picture {
   display: flex;
@@ -70,9 +115,12 @@
 }
 .upper-top-info {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   width: 100%;
+}
+.upper-user-info {
+  display: flex;
 }
 .meme-identification {
   justify-content: flex-start;
@@ -193,26 +241,37 @@
 
 /*End Of Pencil*/
 .meme-title {
-  padding: 0.25rem;
-  padding-left: 0;
-  margin: 0.5rem 0;
-  font-size: 20px;
-  font-weight: 500;
   color: #fbfaf8;
 }
 .lower {
   display: flex;
   width: 100%;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  margin: 1rem;
+  margin: 1rem 0 0 0;
   overflow: hidden;
+}
+.lower span {
+  color: white;
 }
 
 .lower img,
 .lower svg {
   cursor: pointer;
-  height: 30px;
+  height: 25px;
+}
+.interactive-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: auto;
+}
+.interactive-container svg,
+.interactive-container img {
+  stroke: white !important;
+  height: 35px;
+  width: 35px;
+  padding: 0 10px 0 0;
 }
 
 /*Like/container*/
@@ -221,6 +280,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 20px;
+  margin-right: auto;
 }
 .number-of-likes {
   display: flex;
@@ -239,7 +299,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: auto;
+}
+.heart-container svg {
+  stroke: rgba(255, 255, 255, 0.822);
 }
 .inactive-heart {
   fill: none;
@@ -257,7 +319,6 @@
   }
 }
 .heart-icon {
-  margin-left: -10px;
   stroke: #cacacac9;
 }
 
@@ -267,7 +328,6 @@
   animation: hearted 0.2s steps(20);
 }
 .inactive-thumbup {
-  stroke: #cacacac9 !important ;
   stroke-width: 1.5;
 }
 
@@ -286,6 +346,14 @@
 /*Report */
 .report:hover {
   stroke: orangered;
+}
+
+/* options*/
+.options-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
 }
 
 /* options expanded menu on card*/
