Added a condition that fixed padding for the sidebar when screen width decreased below 1600px

--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -263,3 +263,8 @@
     margin-bottom: 2rem;
   }
 }
+@media only screen and (min-height: 900px) and (max-width: 1600px) {
+  .user-activity-information-container > div {
+    padding: 0 0.5rem 0.5rem 0.5rem;
+  }
+}
