Added rightbar with a daily memelord with timer as well as a section for the featured memelord and trending topics. Increased the size of the navigation icons. Moved the add meme button to the top of the screen. There is only one button to like things and it's a crown, for memelord, duh. Updated the color scheme to be all dark.

--- a/src/CSS Components/DropDownMenu.css
+++ b/src/CSS Components/DropDownMenu.css
@@ -7,7 +7,11 @@
 }
 :root {
   --bg: #272932;
+  --light-bg: #4c4d62;
   --bg-accent: #b74f6f;
+  --pink: #ea3788;
+  --blue: #00a7e1;
+
   --text-color: #eeeeee;
   --nav-size: 80px;
   --border: 2px solid rgba(70, 70, 70, 0.342);
