--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   height: 100%;
-  background-color: #4c4d62 !important;
+  background-color: var(--bg);
 }
 
 .App {
   text-align: center;
-  font-family: "Roboto";
+  font-family: 'Roboto';
 }
 span {
   cursor: pointer;
