--- a/src/CSS Components/Card.css
+++ b/src/CSS Components/Card.css
@@ -95,7 +95,7 @@
   cursor: default;
   font-weight: 550;
   padding-bottom: auto;
-  color: #fbfaf8;
+  color: #fbfaf891;
   text-overflow: ellipsis;
 }
 .clickable span {
@@ -218,17 +218,50 @@
 /*Like/container*/
 .like-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  margin-left: 20px;
+  text-align: center;
+  width: auto;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 0.25rem 0.25rem;
+  background-color: rgba(0, 0, 0, 0.26);
+  cursor: pointer;
+}
+
+.like-container-active {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  width: auto;
+  border: 1px solid rgb(182, 50, 199);
+  border-radius: 15px;
+  /* padding: 0 1rem; */
+  padding: 0.25rem 0.25rem;
+  cursor: pointer;
+
+  background-color: rgba(133, 67, 146, 0.116);
+}
+
+.like-container:hover {
+  border: 1px solid rgb(177, 177, 177);
+  border-radius: 15px;
+  background-color: rgba(138, 138, 138, 0.26);
+  transition: all var(--speed);
+}
+.likes-icon {
+  font-size: 1.65rem;
+  padding: 0 0.25rem;
 }
 .number-of-likes {
+  font-size: 1.65rem;
+  padding: 0 0.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   font-weight: 500;
-  font-size: 0.95rem;
   color: #cacacac9;
 }
 
@@ -324,7 +357,7 @@
 .option2 span {
   text-align: center;
   font-size: 1.1rem;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-weight: 400;
 }
 .option1:hover,
