--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -18,6 +18,7 @@
   height: 100%;
   padding: 1rem;
   width: 100%;
+  border-right: 0.5px solid rgba(255, 255, 255, 0.212);
 }
 .sidebar-create-post {
   cursor: pointer;
@@ -40,7 +41,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin: 1rem;
+  margin: 0.9rem;
   font-weight: 600;
   font-size: 2rem;
 }
@@ -51,7 +52,8 @@
   stroke: #ea3788;
 }
 .sidebar-logo svg {
-  min-width: 44px;
+  width: 50px;
+  height: 50px;
 }
 .sidebar-user-section {
   display: flex;
@@ -97,15 +99,6 @@
   border-top: 1px solid rgba(209, 209, 209, 0.13);
   padding-top: 2rem;
 }
-.navigation-group {
-  margin: 0.75rem 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 1rem;
-  cursor: pointer;
-}
 
 .navigation-group-active {
   width: 100%;
@@ -115,12 +108,15 @@
   border-radius: 20px;
   border-image: linear-gradient(#ea3788, #00a7e1) 2 stretch;
 }
-.navigation-group svg {
-  width: 30px;
-  height: 30px;
+.navigation-group svg,
+.logout-container svg {
+  width: 38px;
+  height: 38px;
 }
 .navigation-group-text {
-  margin-left: 2rem;
+  margin-left: 1.5rem;
+  font-weight: 500;
+  font-size: 1.25rem;
 }
 .navigation-group-items {
   width: auto;
@@ -130,7 +126,7 @@
 }
 
 .navigation-group {
-  margin: 0.75rem 0;
+  margin: 0.9rem 0;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -150,8 +146,6 @@
 }
 .sidebar-login svg {
   margin-left: 1px;
-  height: 30px;
-  width: 30px;
 }
 .navigation-settings-icon svg {
   background-color: rgba(255, 255, 255, 0.384);
