--- a/src/CSS Components/Dashboard.css
+++ b/src/CSS Components/Dashboard.css
@@ -4,6 +4,7 @@
   align-items: center;
   flex-direction: column;
   margin-bottom: 2rem;
+  width: 60vw;
 }
 .dashboard-content {
   display: flex;
