--- a/src/CSS Components/UserProfile.css
+++ b/src/CSS Components/UserProfile.css
@@ -2,19 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid black;
+  background-color: #00000033;
+  border: 3px solid #00000033;
   border-radius: 30px;
+  padding: 1rem;
 }
 .user-profile-container {
-  margin-top: 1rem;
+  margin: 1rem 2rem;
   display: flex;
-  height: 100%;
-  width: 100%;
-  justify-content: center;
+  flex-direction: column;
+  width: 70%;
 }
 .user-profile-cover-photo {
   height: 300px;
-  width: 500px;
+  width: 100%;
   background: no-repeat center/80% url('../Assets/doge.svg');
   border-radius: 20px;
   background-color: white;
@@ -48,7 +49,128 @@
   object-fit: cover;
   object-position: 50% 50%;
 }
-.user-follower-count {
+.user-top-section {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.user-profile-stats-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  width: 100%;
+  justify-content: space-evenly;
+}
+.user-profile-stats {
+  display: flex;
+  justify-content: space-around;
+  padding: 0 2rem;
+  width: 100%;
+  align-items: center;
   color: white;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  flex-wrap: wrap;
+}
+
+.user-follower-count {
+}
+.user-stat-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.user-profile-content {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  color: white;
+}
+.user-profile-post-header {
+  display: flex;
+  width: 100%;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: grey;
+}
+.user-profile-post-header-active {
+  display: flex;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: white;
+  padding-bottom: 2rem;
+  border-bottom: 3px solid white;
+}
+
+.user-profile-posts-container {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.user-profile-navigation-container {
+  display: flex;
+}
+.user-stat-title {
+  color: grey;
+}
+.user-follow-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 2rem 0;
+  cursor: pointer;
+}
+
+@keyframes appearButton {
+  from {
+    opacity: 40%;
+  }
+  to {
+    opacity: 100%;
+  }
+}
+
+.user-follow-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  color: white;
+  font-weight: 600;
+  background-color: var(--pink);
+  border: 2px solid var(--pink);
+
+  padding: 1rem;
+  margin: 0 2rem;
+  font-size: 1.25rem;
+  border-radius: 20px;
+  animation: appearButton var(--speed);
+}
+.user-follow-button-active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  color: white;
+  font-weight: 600;
+  border: 2px solid var(--pink);
+  padding: 1rem;
+  margin: 0 2rem;
+  font-size: 1.25rem;
+  border-radius: 20px;
+  background-color: rgba(236, 28, 63, 0.075);
+  animation: appearButton var(--speed);
+}
+.user-follow-button:hover {
+}
+.memes-content {
+  display: flex;
+  flex-direction: column;
+  width: 60vw;
+  justify-content: center;
+  align-items: center;
 }
