--- a/src/CSS Components/Sidebar.css
+++ b/src/CSS Components/Sidebar.css
@@ -93,6 +93,7 @@
   position: relative;
   height: auto;
 }
+
 .sidebar-navigation-icon-active {
 }
 .navigation-group-logout {
@@ -100,7 +101,23 @@
   padding-top: 2rem;
 }
 
+.navigation-group {
+  padding: 0.9rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1rem;
+  cursor: pointer;
+  font-size: 1.3rem;
+  color: rgba(255, 255, 255, 0.767);
+  font-weight: 500;
+}
+
 .navigation-group-active {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 600;
   width: 100%;
   right: 0;
   padding-right: 28px;
@@ -115,8 +132,6 @@
 }
 .navigation-group-text {
   margin-left: 1.5rem;
-  font-weight: 500;
-  font-size: 1.4rem;
 }
 .navigation-group-items {
   width: auto;
@@ -125,15 +140,6 @@
   align-items: center;
 }
 
-.navigation-group {
-  margin: 0.9rem 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 1rem;
-  cursor: pointer;
-}
 .sidebar-login {
   padding: 1rem 0;
   display: flex;
